overflow-fix

--- a/src/app/hall-monitor/hall-monitor.component.scss
+++ b/src/app/hall-monitor/hall-monitor.component.scss
@@ -25,7 +25,6 @@
 
   div.hall-monitor-wrapper{
     max-width: 100%;
-    height: calc(100% - 78px);
     overflow: auto;
   }
 
@@ -137,10 +136,6 @@
 :host {
   flex: 1 1 auto;
 }
-.host {
-  position: relative;
-  height: calc(100% - 78px);
-}
 
 .hall-monitor {
   height: 100%;
@@ -150,7 +145,6 @@
 .hall-monitor-wrapper{
     position: relative;
     height: 100%;
-    overflow: auto;
 }
 
 .hall-monitor-top{
