--- a/src/app/my-room/my-room.component.scss
+++ b/src/app/my-room/my-room.component.scss
@@ -75,10 +75,6 @@
   div.my-room-body-collections {
     width: 100%;
   }
-
-  div.my-room-wrapper{
-    height: initial;
-  }
 }
 
 @media all and (max-width: 375px) {
